# tgm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.rst  codecov.yml  equality_test.py  foo.py  issue.md  mkdocs.yml  pyproject.toml  relhm_tgn.txt  relhm_tgn_error.txt  run.sh  test.py  test_impl.py  tgnv2.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/config/: .spellcheck.yml
.github/scripts/: merge_json_files.py  poll_slurm_job.sh  run_download_tgb_job_sbatch.sh  run_perf_job_sbatch.sh
.github/workflows/: docker.yml  docs.yml  integration.yml  mypy.yml  performance.yml  publish.yml  ruff.yml  spelling.yml  testing.yml
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: architecture.md  benchmarks.md  data.md  dataset.md  dgraph.md  events.md  hooks.md  index.md  loader.md  loaders.md  nn.md  quickstart.md  requirements.txt  timedelta.md  util.md
docs/api/: batch.md  constants.md  data.md  graph.md  loader.md  nn.md  split.md  timedelta.md  util.md
docs/source/: conf.py  data.rst  index.rst  modules.rst  opendg.rst  usage.rst
docs/tutorials/: dgraph.ipynb  dgraph_tutorial.md  hook_tutorial.md  tgb_seq_tutorial.md  thgl_tutorial.md  time_delta_tutorial.md  tutorial_test.py
examples/: dgraph_iteration.py  edgebank.py  gclstm.py  gclstm_example.py  gcn.py  graphmixer.py  recency_example.py  test.py  tgat.py  tgat_tgb.py  tgn.py
examples/analytics/: basic_analytics_example.py  basic_stats.py  batch_analytics_example.py  dos.py  node_analytics_example.py  template.py
examples/graphproppred/: gcn.py  persistant_forecast.py  tgcn.py
examples/linkproppred/: base3.py  count_nodes_freq_optimize.py  ctan.py  dygformer.py  edgebank.py  evolvegcn.py  evolvegcn_bao.py  gclstm.py  gcn.py  graphmixer.py  poptrack.py  roland.py  tgat.py  tgcn.py  tgn.py  tgnv2.py  tncn.py  tpnet.py
examples/llm/: README.md  TGTalker.py  multihop.py  schemas.py  test_tgtalker.py  tgtalker_utils.py
examples/nodeproppred/: dygformer.py  evolvegcn.py  gclstm.py  gcn.py  persistant_forecast.py  tgat.py  tgcn.py  tgn.py  tgnv2.py  tpnet.py
examples/research/: motif_mining.py
examples/spatiotemporal/: gclstm.py  tgcn.py
examples/tgb_seq/: edgebank.py  tgat.py  tgn.py
experiments/: __init__.py  benchmark_discretize.py  config.yaml  configs.py  main.py  run.py  setup.py  util.py  utils.py
experiments/correctness_results/: linkproppred_edgebank_0_tgbl_wiki.json  linkproppred_edgebank_1_tgbl_wiki.json  linkproppred_edgebank_2_tgbl_wiki.json  nodeproppred_gclstm_0_tgbn_trade.json  nodeproppred_gclstm_1_tgbn_trade.json  nodeproppred_gclstm_2_tgbn_trade.json  nodeproppred_gcn_0_tgbn_trade.json  nodeproppred_gcn_1_tgbn_trade.json  nodeproppred_gcn_2_tgbn_trade.json  nodeproppred_tgcn_0_tgbn_trade.json  nodeproppred_tgcn_1_tgbn_trade.json  nodeproppred_tgcn_2_tgbn_trade.json
experiments/graphproppred/: gclstm.py  gcn.py  mint_gclstm.py  mint_gcn.py  mint_persistant_forecast.py  persistant_forecast.py  roland.py  tgcn.py
experiments/linkproppred/: gclstm.py  gcn.py  tgat.py  tgcn.py
experiments/results/: benchmark_discretize.json  linkproppred_dygformer_0_tgbl_lastfm.json  linkproppred_dygformer_0_tgbl_subreddit.json  linkproppred_dygformer_0_tgbl_wiki.json  linkproppred_dygformer_1_tgbl_lastfm.json  linkproppred_dygformer_1_tgbl_subreddit.json  linkproppred_dygformer_1_tgbl_wiki.json  linkproppred_dygformer_2_tgbl_lastfm.json  linkproppred_dygformer_2_tgbl_subreddit.json  linkproppred_dygformer_2_tgbl_wiki.json  linkproppred_dygformer_3_tgbl_wiki.json  linkproppred_dygformer_4_tgbl_wiki.profile  linkproppred_edgebank.json  linkproppred_edgebank_0.json  linkproppred_edgebank_0_tgbl_lastfm.json  linkproppred_edgebank_0_tgbl_subreddit.json  linkproppred_edgebank_0_tgbl_wiki.json  linkproppred_edgebank_1.json  linkproppred_edgebank_1337_tgbl_subreddit.json  linkproppred_edgebank_1_tgbl_lastfm.json  linkproppred_edgebank_1_tgbl_subreddit.json  linkproppred_edgebank_1_tgbl_wiki.json  linkproppred_edgebank_2.json  linkproppred_edgebank_2_tgbl_lastfm.json  linkproppred_edgebank_2_tgbl_subreddit.json  linkproppred_edgebank_2_tgbl_wiki.json  linkproppred_edgebank_3.json  linkproppred_edgebank_3_tgbl_wiki.json  linkproppred_edgebank_3_tgbl_wiki.profile  linkproppred_edgebank_4_tgbl_wiki.profile  linkproppred_gclstm_0_tgbl_lastfm.json  linkproppred_gclstm_0_tgbl_subreddit.json  linkproppred_gclstm_0_tgbl_wiki.json  linkproppred_gclstm_1_tgbl_lastfm.json  linkproppred_gclstm_1_tgbl_subreddit.json  linkproppred_gclstm_1_tgbl_wiki.json  linkproppred_gclstm_2_tgbl_lastfm.json  linkproppred_gclstm_2_tgbl_subreddit.json  linkproppred_gclstm_2_tgbl_wiki.json  linkproppred_gclstm_3_tgbl_wiki.json  (+68 more)
experiments/sbatch_scripts/: tgat_bsize_1.sbatch  tgat_bsize_10.sbatch  tgat_bsize_100.sbatch  tgat_bsize_200.sbatch  tgat_bsize_50.sbatch  tgat_bunit_D.sbatch  tgat_bunit_h.sbatch  tgat_bunit_m.sbatch
jobs/: download_tgb_data.sh  edgebank.sh
jobs/configs/: datasets.txt  methods.txt
jobs/scripts/: download_tgb_data.sh  run_method.sh  submit_all.sh
opendg/: __init__.py  _events.py  data.py  events.py  graph.py  hooks.py  loader.py  sampler.py  seed.py  timedelta.py  typing.py
opendg/_io/: __init__.py  csv.py  pandas.py  tgb.py
opendg/_storage/: __init__.py  base.py  dict_impl.py  (+2 more)
perf/: foo.py
scripts/: build_docs.sh  clean_up.sh  download_example_graphproppred_datasets.sh  download_graph_prop_datasets.sh  download_tgb_datasets.sh  parse_log_to_json.sh  run_ci_listener.py  run_ci_tests.sh  run_perf_tests.sh  run_unit_tests.sh  start_ci_listener.sh  trigger_integration_tests.sh  trigger_perf_tests.sh  trigger_workflow.sh
test/: test_data.py  test_dataloader.py  test_dgraph.py  test_events.py  test_mock.py  test_seed.py  test_storage_impl.py  test_timedelta.py
tgm/: __init__.py  constants.py  data.py  dataset.py  exceptions.py  graph.py  hooks.py  loader.py  recipe.py  split.py  timedelta.py
tools/: log_parser.py  profiling.py
(+273 files in other folders)
