[project]
name = "tgm-lib"
version = "0.1.0b0"
description = "Efficient and Modular ML on Temporal Graphs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name="Jacob Chmura", email="jacobpaul.chmura@gmail.com"},
    {name="Shenyang Huang", email="shenyang.huang@mail.mcgill.ca"},
]
dependencies = [
    "numpy>=2.2.6",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
analytics = [
    "networkx>=3.2.1",
    "py-tgb>=2.2.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
dev = [
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff==0.11.1",
    "py-tgb>=2.2.0",
    "pandas>=1.5.3",
    "pytest-xdist>=3.7.0",
    "pytest-benchmark>=5.1.0",
]

docs = [
    "mkdocs-material>=9.6.9",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.0",
]
examples = [
    "pandas>=2.3.0",
    "py-tgb>=2.2.0",
    "torchmetrics>=1.7.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
cpu = [
    "torch==2.5.1",
]
cu121 = [
    "pyg-lib>=0.4.0",
    "torch==2.5.1",
    "torch-cluster>=1.6.3",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
]
cu124 = [
    "pyg-lib>=0.4.0",
    "torch==2.5.1",
    "torch-cluster>=1.6.3",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
]

[tool.uv]
conflicts = [
  [
    {extra = "cpu"},
    {extra = "cu121"},
    {extra = "cu124"},
  ]
]
no-build-isolation-package = [
  "torch-cluster",
  "torch-scatter",
  "torch-sparse",
  "torch-spline-conv",
  "torchaudio",
  "torchvision"
]

[tool.uv.sources]
torch = [
  { index = "indexcpu",   extra = "cpu"   },
  { index = "indexcu121", extra = "cu121" },
  { index = "indexcu124", extra = "cu124" },
]
torchvision = [
  { index = "indexcu121", extra = "cu121" },
  { index = "indexcu124", extra = "cu124" },
]
torchaudio = [
  { index = "indexcu121", extra = "cu121" },
  { index = "indexcu124", extra = "cu124" },
]
pyg-lib = [
  { index = "indexpygcu121", extra = "cu121" },
  { index = "indexpygcu124", extra = "cu124" },
]
torch-scatter = [
  { index = "indexpygcu121", extra = "cu121" },
  { index = "indexpygcu124", extra = "cu124" },
]
torch-sparse = [
  { index = "indexpygcu121", extra = "cu121" },
  { index = "indexpygcu124", extra = "cu124" },
]
torch-cluster = [
  { index = "indexpygcu121", extra = "cu121" },
  { index = "indexpygcu124", extra = "cu124" },
]
torch-spline-conv = [
  { index = "indexpygcu121", extra = "cu121" },
  { index = "indexpygcu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "indexcu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "indexcu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "indexpygcu124"
url = "https://data.pyg.org/whl/torch-2.5.0+cu124.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "indexpygcu121"
url = "https://data.pyg.org/whl/torch-2.5.0+cu121.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "indexcpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.pip]
torch-backend = "auto"

[tool.flit.module]
name = "tgm"

[tool.mypy]
files = ["tgm"]
install_types = true
non_interactive = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitignore", "__init__.py"]

[tool.ruff]
src = ["tgm"]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]
ignore = [
    "D100",  # Ignore "Missing docstring in public module"
    "D101",  # Ignore "Missing docstring in public class"
    "D102",  # Ignore "Missing docstring in public method"
    "D103",  # Ignore "Missing docstring in public function"
    "D104",  # Ignore "Missing docstring in public package"
    "D105",  # Ignore "Missing docstring in magic method"
    "D107",  # Ignore "Missing docstring in __init__"
    "D205",  # Ignore "blank line required between summary line and description"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--color=yes",
    "-vvv",
]
markers = [
    "gpu: Tests that require a GPU",
    "slow: Tests that are slow",
    "integration: Integration tests to be run with slurm",
    "small: Run performance tests on small TGB datasets",
    "medium: Run performance tests on medium TGB datasets",
    "large: Run performance tests on large TGB datasets",
]

[tool.coverage.run]
source = ["tgm"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "register_parameter",
    "torch.cuda.is_available",
]
